# m365-agents-sdk-ai-foundry-wrapper

./: .gitignore  README.md  m365-agents-workspace.code-workspace
.github/: copilot-instructions.md
cea-proxy-py/: .dockerignore  Dockerfile  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  pyproject.toml
cea-proxy-py/appPackage/: manifest.json
cea-proxy-py/src/: agent.py  app.py  bot.py  config.py  requirements.txt
cea-proxy-py/src/frontend_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: application-gateway.md  container-deployment.md  infrastructure-deployment.md  logic-app-deployment.md  prerequisites.md  teams-deployment.md
infra/: data.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
infra/modules/: README.md
infra/modules/acr/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/ai-foundry/: main.tf  outputs.tf  variables.tf
infra/modules/app-gateway/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/application-insights/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/bot-service/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/container-apps/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/foundation/: main.tf
infra/modules/identity/: main.tf  outputs.tf  variables.tf
infra/modules/key-vault/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/log-analytics/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/logic-apps/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/nsgs/: README.md  data.tf  locals.tf  main.tf  nsg_agent.tf  nsg_app_gateway.tf  nsg_container_apps.tf  nsg_logic_apps.tf  nsg_private_endpoints.tf  outputs.tf  (+2 more)
infra/scripts/: create_default_logicapp_workflow.py  requirements.txt
src/: env.TEMPLATE  requirements.txt  test_import.py
src/default-logic-apps-agent/: README.md  create_connection.py  create_default_logicapp_workflow.py  logic.json  logic2.json  openapi.json  openapi2.json  openapi_spec_template.json  pyproject.toml  requirements.txt  test.http  workflow_definition.json
src/m365-agents-container/: .dockerignore  .env  Dockerfile  README.md  env.TEMPLATE  pyproject.toml
src/m365-agents-container/.github/: copilot-instructions.md
src/m365-agents-container/appPackage/: manifest.json
src/m365-agents-container/src/: __init__.py  agent.py  config.py  conversation_state.py  foundry_agent_factory.py  main.py  start_server.py
src/m365-agents-container/src/agents/: __init__.py  factory.py  state.py
src/m365-agents-container/src/api/: __init__.py  cards.py  handlers.py  streaming.py
src/m365-agents-container/src/app/: __init__.py  bootstrap.py  config.py  logging.py  server.py
src/src/: agent.py  config.py  foundry_agent_factory.py  main.py  start_server.py
(+7 files in other folders)
