[project]
name = "frontend-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "microsoft-agents-activity>=0.1.2",
    "microsoft-agents-authentication-msal>=0.1.2",
    "microsoft-agents-hosting-aiohttp>=0.1.2",
    "microsoft-agents-hosting-core>=0.1.2",
    "pydantic>=2.8.0",
    "azure-ai-projects>=1.1.0b4",
    "azure-identity>=1.17.0",
    "python-dotenv>=1.0.0",
]
