[project]
name = "logicapp-workflow-tools"
version = "0.1.0"
description = "Utility scripts for provisioning and updating Logic App Standard workflows"
requires-python = ">=3.11"
# Only the minimal, non-optional dependencies required to run the script.
dependencies = [
    "requests>=2.32.0",
    "azure-identity>=1.17.0",
    "azure-ai-agents>=1.0.0b6",
    "azure-ai-projects>=1.0.0b3",
    "types-requests>=2.32.0.20240914",
]

[project.scripts]
create-default-logicapp-workflow = "create_default_logicapp_workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly include just the standalone script; no package directory needed.
only-include = ["create_default_logicapp_workflow.py"]

[tool.uv]
# Isolated script environment inside infra/scripts
managed = true
